首頁.品牌介紹切版完成

--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -16,6 +16,7 @@
 @import "./components/productCard";
 @import "./components/customerForm";
 @import "./components/navFooter";
+@import "./components/navHeader";
 
 // ##模組
 @import "./module/shopping";
