--- a/src/assets/scss/components/_navFooter.scss
+++ b/src/assets/scss/components/_navFooter.scss
@@ -1,6 +1,7 @@
 .navFooter{
-  padding-top: 40px;
+  padding-top: 25px;
   padding-bottom: 20px;
+  border-top: 1px solid lighten($brand-gray,40%);
 
   &__infoWrap{
     overflow: hidden;
