結帳流程修正

--- a/src/assets/scss/helpers/_variables.scss
+++ b/src/assets/scss/helpers/_variables.scss
@@ -93,6 +93,7 @@ $theme-colors: map-merge(
     "primary":    $primary,
     "secondary":  $secondary,
     "secondary1":  $brand-secondary1,
+    "secondary1-light": $brand-secondary1-light,
     "secondary2":  $brand-secondary2,
     "success":    $success,
     "info":       $info,
