--- a/src/assets/scss/pages/_homePage.scss
+++ b/src/assets/scss/pages/_homePage.scss
@@ -33,7 +33,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url("@/assets/images/banner-bg2.jpg");
+    background-image: url("./assets/images/banner-bg2.jpg");
     width: 100%;
     height: 540px;
     background-size: 100%;
@@ -53,7 +53,7 @@ body{
   }
 
   .bannerTitle{
-    // letter-spacing: 3px;//@@沒繼承
+    // letter-spacing: 3px;//..沒繼承
     &__p1{
       margin-right: 120px;
       font-size: 50px;
@@ -62,7 +62,7 @@ body{
 
     &__p2{
       // position: relative;
-      // top: -100%;//@@無效
+      // top: -100%;//..無效
       margin-top: -8px;
       margin-left: 170px;
       font-size: 30px;
@@ -88,7 +88,7 @@ body{
     font-size: 40px;
     letter-spacing: 1px;
     color: $brand-secondary1;
-    background: url("@/assets/images/titleIcon_main.png") no-repeat;
+    background: url("./assets/images/titleIcon_main.png") no-repeat;
     background-position: bottom right;
     background-size: 80%;
 
@@ -99,7 +99,7 @@ body{
 
   &__sectionBg{
     position: relative;;
-    background-image:url("@/assets/images/section_bg.jpg");
+    background-image:url("./assets/images/section_bg.jpg");
     height: 900px;
     margin-bottom: 120px;
     &::after{
@@ -161,7 +161,7 @@ body{
   &__itemBox{
     position: relative;
     width: 100%;
-    padding-bottom: 100%;//@@自身or寬度? 
+    padding-bottom: 100%;//..自身or寬度? 
     background-size: cover;
     background-position: 50% 50%;
     text-align: center;
@@ -179,19 +179,19 @@ body{
       transform:translate(-50%,-50%);
     }
     &--tent{
-      background-image: url("@/assets/images/prdthumb_tent.png");
+      background-image: url("./assets/images/prdthumb_tent.png");
     }
 
     &--bedding{
-      background-image: url("@/assets/images/prdthumb_bedding.png");
+      background-image: url("./assets/images/prdthumb_bedding.png");
     }
 
     &--funiture{
-      background-image: url("@/assets/images/prdthumb_funiture.png");
+      background-image: url("./assets/images/prdthumb_funiture.png");
     }
 
     &--picnic{
-      background-image: url("@/assets/images/prdthumb_picnic.png");
+      background-image: url("./assets/images/prdthumb_picnic.png");
     }
 
     &::after{
@@ -359,7 +359,7 @@ body{
 
 .metaCopyPart3{
   padding-top: 110px;
-  // margin-bottom: 150px;//@@無效
+  // margin-bottom: 150px;//..無效
   color:$brand-secondary1;
   display: flex;
   justify-content: flex-end;
@@ -369,7 +369,7 @@ body{
     display: flex;
     flex-direction: row-reverse;
     // padding: 100px 0;
-    padding: 6% 0;//@@上下百分比
+    padding: 6% 0;//..上下百分比
     // padding: 135px 280px 110px 0;
     justify-content:flex-end;
     background-color: rgba(255, 255, 255, .8);
@@ -508,7 +508,7 @@ body{
   &__title{
     // margin-bottom: 6px;
     overflow: hidden;
-    line-clamp: 1;//@@
+    line-clamp: 1;//..
     white-space: nowrap;
     font-size: 18px;
     font-weight: bold;
@@ -542,7 +542,7 @@ body{
 .adBar{
   height: 220px;
   margin-bottom: 100px;
-  background-image: url("@/assets/images/adbar1.png");
+  background-image: url("./assets/images/adbar1.png");
   background-size: cover;
   background-position: 50% 40%;
 }
@@ -560,16 +560,16 @@ body{
     width: 250px;
     margin-bottom: .5rem;//##!原來這樣縮高度就可跟卡片mb-2一樣了
     // height: 700px;
-    background-image: url("@/assets/images/tent_bg.jpg");
+    background-image: url("./assets/images/tent_bg.jpg");
     background-size:cover;
     background-position: 58% 50%;
     // >img{
     //   max-width: 100%;
     //   height: auto;
     // }
-    @media screen and (max-width:762px){
-      width: 100%;
-    }
+    // @media screen and (max-width:762px){
+    //   width: 100%;
+    // }
   }
 
   &__bannerTitle{
@@ -605,7 +605,7 @@ body{
   margin-bottom: 80px;
   @media screen and (max-width:1199px){
     flex-flow: column nowrap; //##排法2
-    // justify-content:center;//@@
+    // justify-content:center;//..
     // flex-wrap: wrap;
     
   }
@@ -613,7 +613,7 @@ body{
     width: 30%;
     // text-align: center;
     >h3{
-      font-family: Huakang;// @@內建
+      font-family: Huakang;// ..內建
       // font-size: 30px;
     }
     @media screen and (max-width:1199px){
@@ -698,7 +698,7 @@ body{
   justify-content: center;
   align-items: center;
   color:#fff;
-  background-image: url("@/assets/images/footer_bg.png");
+  background-image: url("./assets/images/footer_bg.png");
 
   &__logo{
     width: 120px;
