--- a/src/assets/scss/pages/_aboutUs.scss
+++ b/src/assets/scss/pages/_aboutUs.scss
@@ -140,7 +140,7 @@
     text-align: center;
     >h5{
       // outline: 1px solid red;
-      display: inline-block;//##這地方可用!
+      display: inline-block;//##這地方可用
       font-size: 20px;
       line-height: 1.5;
       border-bottom:1px dotted #fff;
