--- a/src/assets/scss/components/_navHeader.scss
+++ b/src/assets/scss/components/_navHeader.scss
@@ -1,4 +1,9 @@
 .navHeader{
+  position: fixed;
+  z-index: 9999;
+  top: 0;
+  left: 0;
+  width: 100vw;
   background-color: $brand-secondary1;
   padding-top: 0;
   padding-bottom: 0;
