--- a/src/assets/scss/helpers/_mixin.scss
+++ b/src/assets/scss/helpers/_mixin.scss
@@ -44,3 +44,15 @@
 // @mixin border($bw:1px,$bc,$bs:solid) {
 //   border: $bw $bs $bc; 
 // }
+
+@mixin phone(){
+  @media screen and (max-width:767.98px){
+    @content;
+  }
+}
+
+@mixin pad(){
+  @media screen and (max-width:991.98px){
+    @content;
+  }
+}
