--- a/src/assets/scss/pages/_homePage.scss
+++ b/src/assets/scss/pages/_homePage.scss
@@ -26,6 +26,13 @@ body{
 }
 
 .meta{
+
+  &__container{
+    @include pad(){
+      width: 100%;
+      max-width: 100%;
+    }
+  }
   &__banner{
     display: flex;
     justify-content: center;
@@ -147,6 +154,14 @@ body{
 
 .metaPrdTab{
   // margin-bottom: 100px;
+
+  &__container{
+    @include pad(){
+      width: 100vw;
+      overflow-x: scroll;
+      flex-wrap: nowrap;
+    }
+  }
   &__item{
     // position: relative;
     width: 25%;
@@ -214,12 +229,18 @@ body{
       font-size: 30px;
       line-height: 1;
       margin-bottom: 5px;
+      @include pad(){
+        font-size: 16px;
+      }
     }
   }
 
   &__txt{
     border: 1px solid #fff;
     padding: 4px 6px;
+    @include pad(){
+      display: none;
+    }
   }
 }
 
@@ -233,7 +254,9 @@ body{
     width: 100%;
     height: 480px;
     background-color: $brand-secondary1;
-
+    // @include pad(){
+    //   height: 620px;
+    // }
   }
 
   &__txt{
@@ -244,9 +267,17 @@ body{
     box-sizing: border-box;
     padding-top: 190px;
     padding-right: 40px;
-    margin-left: 10%;
+    // margin-left: 10%;
     text-align: center;
     color:#fff;
+    @include pad(){
+      width: 90%;
+      top: 0;
+      left: 0;
+      right: 0;
+      margin: auto;
+      padding: 0;
+    }
   }
 
   &__titleTxt{
@@ -273,6 +304,12 @@ body{
       width: 100%;
       height: 100%;
       object-fit:cover;//##因為圖片沒裁切
+    }
+
+    @include pad(){
+      position: absolute;
+      bottom: -20%;
+      justify-content: center;
     }
   }
 
