--- a/src/assets/scss/helpers/_util.scss
+++ b/src/assets/scss/helpers/_util.scss
@@ -1,3 +1,10 @@
+@import './mixin.scss';
+
+.m-none{
+  @include pad(){
+    display: none;
+  }
+}
 .bg-cover{
     background-size: cover;
     background-position: 50% 50%;
