--- a/src/assets/scss/pages/_homePage.scss
+++ b/src/assets/scss/pages/_homePage.scss
@@ -38,9 +38,14 @@ body{
     justify-content: center;
     align-items: center;
     background-image: url("./assets/images/banner-bg2.jpg");
+    // background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     width: 100%;
     height: 540px;
-    background-size: 100%;
+    @include pad(){
+      height: 300px;
+    }
   }
 
   &__bannerFont{
@@ -157,7 +162,8 @@ body{
 
   &__container{
     @include pad(){
-      width: 100vw;
+      // width: 100vw;
+      width: 100%;
       overflow-x: scroll;
       flex-wrap: nowrap;
     }
@@ -168,6 +174,10 @@ body{
 
     @media screen and (min-width:1200px){
       // width: 20%;
+    }
+    @include pad(){
+      width: 200px;
+      flex-shrink: 0;
     }
   }
   &__itemBox{
@@ -248,19 +258,24 @@ body{
 .metaCopyPart1{
   position: relative;
   margin-bottom: 200px;
+  @include pad(){
+    margin-bottom: 0;
+  }
   &__box{
     position: relative;
     // width: 90%;
     width: 100%;
     height: 480px;
     background-color: $brand-secondary1;
-    // @include pad(){
-    //   height: 620px;
-    // }
+    @include phone(){
+      height: 370px;
+      margin-bottom: 27%;
+    }
   }
 
   &__txt{
     position: absolute;
+    z-index: 1;
     width: 30%;
     top: 0;
     right: 0;
@@ -270,13 +285,14 @@ body{
     // margin-left: 10%;
     text-align: center;
     color:#fff;
-    @include pad(){
+    @include phone(){
       width: 90%;
       top: 0;
       left: 0;
       right: 0;
       margin: auto;
       padding: 0;
+      padding-top: 30px;
     }
   }
 
@@ -287,11 +303,17 @@ body{
     font-size: 45px;
     letter-spacing:3px;
     border-bottom: 3px solid $brand-primary;
+    @include pad(){
+      font-size: 35px;
+    }
   }
 
   &__pTxt{
     font-size: 33px;
     white-space: nowrap;
+    @include pad(){
+      font-size: 25px;
+    }
   }
 
   &__pic{
@@ -306,9 +328,11 @@ body{
       object-fit:cover;//##因為圖片沒裁切
     }
 
-    @include pad(){
+    @include phone(){
       position: absolute;
-      bottom: -20%;
+      // bottom: -20%;//%%
+      top:58%;
+      padding-top: 0;
       justify-content: center;
     }
   }
@@ -324,6 +348,9 @@ body{
     border-style: solid;
     border-width: 200px 200px 0 0;
     border-color: $brand-primary transparent transparent transparent;
+    @include pad(){
+      display: none;
+    }
   }
 }
 
