--- a/src/assets/scss/helpers/_mixin.scss
+++ b/src/assets/scss/helpers/_mixin.scss
@@ -45,14 +45,21 @@
 //   border: $bw $bs $bc; 
 // }
 
+@mixin pad(){
+  @media screen and (max-width:991.98px){
+    @content;
+  }
+}
+
 @mixin phone(){
   @media screen and (max-width:767.98px){
     @content;
   }
 }
 
-@mixin pad(){
-  @media screen and (max-width:991.98px){
+
+@mixin sm(){
+  @media (max-width: 575.98px) {
     @content;
   }
 }
