--- a/src/assets/scss/components/_navFooter.scss
+++ b/src/assets/scss/components/_navFooter.scss
@@ -3,10 +3,17 @@
   padding-bottom: 20px;
   border-top: 1px solid lighten($brand-gray,40%);
 
+  @include phone(){
+    display:none;
+  }
+
   &__infoWrap{
     overflow: hidden;
     padding: 0 15%;
     border-bottom: 2px solid lighten($brand-gray,40%);
+    @include pc(){
+      padding: 0;
+    }
   }
   &__logo{
     float: left;
