--- a/src/assets/scss/pages/_homePage.scss
+++ b/src/assets/scss/pages/_homePage.scss
@@ -210,6 +210,7 @@ body{
     background-size: cover;
     background-position: 50% 50%;
     text-align: center;
+    cursor: pointer;
     color: #fff;
     >div{
       position: absolute;
@@ -721,7 +722,7 @@ body{
   }
   &__wrapper{
     display: flex;
-    @include pad(){
+    @include pc(){
       flex-wrap: wrap;
     }
   }
@@ -744,7 +745,7 @@ body{
     // @media screen and (max-width:762px){
     //   width: 100%;
     // }
-    @include pad(){
+    @include pc(){
       width: 100%;
       height: 165px;//不會影響旁邊高度
     }
@@ -765,15 +766,23 @@ body{
     padding: 13px;
     // box-shadow: 10px 10px 0px 0px $brand-primary;
     box-shadow: 10px 10px 0px 0px $brand-secondary1-light;
-    @include pad(){
+    &.changeLocation{
+      @include media-breakpoint-up(xl){
+        margin-bottom:0;
+        position:relative;
+        bottom: 24%;
+      }
+    }
+    @include pc(){
       display: flex;
       // align-items: bottom; //@@為何反而跑到下面?
       align-items: baseline;
+      margin-bottom: 0;
     }
     >h4{
       margin-bottom: 0;
       font-size: 42px;
-      @include pad(){
+      @include pc(){
         margin-right: 12px;
       }
     }
