連結.footer等小修正

--- a/src/assets/scss/helpers/_variables.scss
+++ b/src/assets/scss/helpers/_variables.scss
@@ -198,7 +198,8 @@ $body-color:                $gray-900 !default;
 //
 // Style anchor elements.
 
-$link-color:                              theme-color("primary") !default;
+// $link-color:                              theme-color("primary") !default;
+$link-color:                              theme-color("secondary1") !default;
 $link-decoration:                         none !default;
 $link-hover-color:                        darken($link-color, 15%) !default;
 $link-hover-decoration:                   underline !default;
