--- a/src/assets/scss/components/_navFooter.scss
+++ b/src/assets/scss/components/_navFooter.scss
@@ -65,6 +65,23 @@
     &:nth-child(odd){
       margin-right: 5px;
     }
+    >a{
+      display: block;
+      width: 100%;
+      height: 100%;
+      text-decoration: none;
+      text-align: center;
+      // vertical-align:middle;
+      // font-size: 30px;
+      >i{
+      // >i,i::before{
+        vertical-align:text-bottom;
+        font-size: 30px;
+      }
+      // .fa-youtube{
+      //   font-size: 25px;
+      // }
+    }
     >img{
       width: 100%;
       height: auto;
